--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,15 +1,13 @@
 <div class="user-list">
     <h2>Users</h2>
     @if (loading) {
-    <p>Loading users...</p>
+    <app-loading-spinner></app-loading-spinner>
+    } @else if(error) {
+        <div class="error-message">{{ error }}</div>
     } @else {
     <ul>
         @for (user of users; track user.id) {
-        <li>
-            <h3>{{ user.name }}</h3>
-            <p>Email: {{ user.email }}</p>
-            <p>Username: {{ user.username }}</p>
-        </li>
+        <app-user-card [user]="user"></app-user-card>
         }
     </ul>
     }
